[package]
name = "rs_battle_for_nation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
itertools = "0.10.0"
clap = { version = "4.3.5", features = ["derive"] }
rayon = "1.7.0"
rustc-hash = "1.1.0"
